# pretrain_vlm

./: .gitignore  README.md  config.yaml  inference.py  inference_instruction.py  pyproject.toml  requirements.txt  streamlit_instruction_test.py  streamlit_stage1_test.py  train.py  train_instruction.py
demos/: _utils.py  instruction.py  stage1.py
docs/: stage1_llava_fix_notes.md
notebooks/: 01_stage1_prepare_caption_data.ipynb  02_stage2_prepare_sharegpt_localization.ipynb  03_stage2_vietnamtourism_crawl_qa_prepare.ipynb  04_benchmark_ktvic_vista.ipynb
prompts/: caption_prompt.j2  vqa_question.j2  vqa_system.j2
scripts/: crawl_vietnamtourism.py  download_benchmarks.py  download_benchmarks.sh  eval_benchmarks.sh  evaluate.py  evaluate_ktvic.py  evaluate_viet_cultural_vqa.py  generate_qa_vietnamtourism.py  normalize_numbers.py  prepare_coco_data.py  prepare_data.py  prepare_instruction_5cd_localization.py  prepare_instruction_common.py  prepare_instruction_data.py  prepare_instruction_viet_sharegpt.py  prepare_vietnamtourism_data.py  run_benchmarks.sh  run_train.sh  train_instruction.sh  train_stage1.sh  train_stage1_uit_card2.sh
src/: checkpoint.py  collator.py  collators.py  config.py  data.py  dataset.py  inference.py  instruction_collator.py  instruction_dataset.py  metrics.py  model.py  modeling.py  paths.py  prompts.py  runtime.py  trainer.py  training.py  utils.py
src/evaluation/: __init__.py  io.py  metrics.py  vqa_runtime.py
tests/: test_instruction_entrypoints.py  test_normalize_numbers.py  test_vietnamtourism_conversations.py
(+8 files in other folders)
