[project]
name = "pretrain-vlm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0,<2",
    "datasets>=3.6.0,<5",
    "gdown>=6.0.0,<7",
    "loguru>=0.7.3",
    "pillow>=12.2.0,<13",
    "pyyaml>=6.0.3,<7",
    "torch>=2.10.0,<3",
    "transformers>=4.55.4,<5",
]

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.format]
skip-magic-trailing-comma = true
